--- a/helloExpress/package.json
+++ b/helloExpress/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "application-name",
+  "name": "helloExpress",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "express": "3.1.0",
     "jade": "*",
     "less-middleware": "*"
+  },
+
+  "devDependencies": {
+
+    "nodemon": "*"
+
   }
 }
